--- a/PharmApp/PharmApp/packages.config
+++ b/PharmApp/PharmApp/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="EMGU.CV" version="4.1.1.3497" targetFramework="net48" />
   <package id="ImapX" version="2.0.0.18" targetFramework="net48" />
+  <package id="log4net" version="2.0.12" targetFramework="net48" />
   <package id="MailKit" version="2.10.1" targetFramework="net48" />
   <package id="MimeKit" version="2.10.1" targetFramework="net48" />
   <package id="PDFsharp" version="1.50.5147" targetFramework="net48" />
