--- a/PharmApp/PharmApp/App.config
+++ b/PharmApp/PharmApp/App.config
@@ -1,18 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="PharmApp.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="PharmApp.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
-    <userSettings>
+    <applicationSettings>
         <PharmApp.Properties.Settings>
-            <setting name="lastDispensedPrescriptionItemID" serializeAs="String">
-                <value>0</value>
+            <setting name="SHOW_OCR_IMAGE" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="SHOW_BOUNDING_RECTS" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="SHOW_INDIVIDUAL_OCR_RECT" serializeAs="String">
+                <value>False</value>
             </setting>
         </PharmApp.Properties.Settings>
-    </userSettings>
+    </applicationSettings>
 </configuration>
