--- a/PharmApp/PharmApp/App.config
+++ b/PharmApp/PharmApp/App.config
@@ -4,6 +4,9 @@
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
             <section name="PharmApp.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="PharmApp.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
@@ -19,6 +22,19 @@
             <setting name="SHOW_INDIVIDUAL_OCR_RECT" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="USE_EXAMPLE_PMR" serializeAs="String">
+                <value>False</value>
+            </setting>
         </PharmApp.Properties.Settings>
     </applicationSettings>
+    <userSettings>
+        <PharmApp.Properties.Settings>
+            <setting name="UPDATE_RMS" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="CLEAN_RMS" serializeAs="String">
+                <value>True</value>
+            </setting>
+        </PharmApp.Properties.Settings>
+    </userSettings>
 </configuration>
