--- a/PharmApp/PharmApp/Properties/Settings.settings
+++ b/PharmApp/PharmApp/Properties/Settings.settings
@@ -11,5 +11,14 @@
     <Setting Name="SHOW_INDIVIDUAL_OCR_RECT" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="USE_EXAMPLE_PMR" Type="System.Boolean" Scope="Application">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="UPDATE_RMS" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="CLEAN_RMS" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
