--- a/PharmApp/PharmApp/PharmApp.csproj
+++ b/PharmApp/PharmApp/PharmApp.csproj
@@ -108,6 +108,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Security" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
