--- a/PharmApp/PharmApp/packages.config
+++ b/PharmApp/PharmApp/packages.config
@@ -5,6 +5,7 @@
   <package id="log4net" version="2.0.12" targetFramework="net48" />
   <package id="MailKit" version="2.10.1" targetFramework="net48" />
   <package id="MimeKit" version="2.10.1" targetFramework="net48" />
+  <package id="Nager.Date" version="1.29.2" targetFramework="net48" />
   <package id="PDFsharp" version="1.50.5147" targetFramework="net48" />
   <package id="Portable.BouncyCastle" version="1.8.8" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
