--- a/PharmApp/PharmApp/packages.config
+++ b/PharmApp/PharmApp/packages.config
@@ -1,13 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EMGU.CV" version="4.1.1.3497" targetFramework="net48" />
+  <package id="Emgu.CV" version="4.5.1.4349" targetFramework="net48" />
+  <package id="Emgu.CV.Bitmap" version="4.5.1.4349" targetFramework="net48" />
+  <package id="Emgu.CV.UI" version="4.5.1.4349" targetFramework="net48" />
   <package id="ImapX" version="2.0.0.18" targetFramework="net48" />
   <package id="log4net" version="2.0.12" targetFramework="net48" />
-  <package id="MailKit" version="2.10.1" targetFramework="net48" />
-  <package id="MimeKit" version="2.10.1" targetFramework="net48" />
+  <package id="MailKit" version="2.13.0" targetFramework="net48" />
+  <package id="MimeKit" version="2.13.0" targetFramework="net48" />
   <package id="Nager.Date" version="1.29.2" targetFramework="net48" />
   <package id="PDFsharp" version="1.50.5147" targetFramework="net48" />
-  <package id="Portable.BouncyCastle" version="1.8.8" targetFramework="net48" />
+  <package id="Portable.BouncyCastle" version="1.8.10" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Drawing.Common" version="5.0.0" targetFramework="net48" />
+  <package id="System.Drawing.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net48" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net48" />
   <package id="ZedGraph" version="5.1.7" targetFramework="net48" />
 </packages>
