--- a/PharmApp/UnitTest/packages.config
+++ b/PharmApp/UnitTest/packages.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Emgu.CV" version="4.5.1.4349" targetFramework="net48" />
+  <package id="Emgu.CV.Bitmap" version="4.5.1.4349" targetFramework="net48" />
   <package id="MSTest.TestAdapter" version="2.2.5" targetFramework="net48" />
   <package id="MSTest.TestFramework" version="2.2.5" targetFramework="net48" />
+  <package id="System.Drawing.Common" version="5.0.0" targetFramework="net48" />
+  <package id="System.Drawing.Primitives" version="4.3.0" targetFramework="net48" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net48" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net48" />
 </packages>
