--- a/PharmApp/PharmApp/PharmApp.csproj
+++ b/PharmApp/PharmApp/PharmApp.csproj
@@ -454,11 +454,11 @@
     <Content Include="Resources\RMS Request Repeatable.tif" />
     <Content Include="Resources\RMS Signoff.png" />
     <Content Include="Resources\tessdata\.gitmodules" />
+    <Content Include="Resources\Test images\example_reorder.bmp" />
     <Content Include="Resources\Test images\mickey_mouse.jpg" />
     <Content Include="Resources\Test images\Mickey_Mouse_PMR.bmp" />
     <Content Include="Resources\Test images\mickey_mouse_request.jpg" />
     <Content Include="Resources\Test images\ramipril.jpg" />
-    <Content Include="Resources\Test images\reorder.jpg" />
     <Content Include="Resources\Test images\robert_pryde.jpg" />
     <Content Include="Resources\Test images\Robert_Pryde_PMR.bmp" />
     <Content Include="Resources\Test images\robert_pryde_request.jpg" />
