--- a/PharmApp/PharmApp/PharmApp.csproj
+++ b/PharmApp/PharmApp/PharmApp.csproj
@@ -181,6 +181,9 @@
     <Compile Include="src\GUI\RequestHistoryDrawing.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="src\GUI\CopyPatientDetailsButtonDrawing .cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="src\GUI\RequestsButtonDrawing.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -443,6 +446,7 @@
   <ItemGroup>
     <Content Include="License-LGPL.txt" />
     <Content Include="Resources\Blue_circle.png" />
+    <Content Include="Resources\copy_120015.png" />
     <Content Include="Resources\Green_circle.png" />
     <Content Include="Resources\Green_circle_ast.png" />
     <Content Include="Resources\Link_icon.ico" />
