--- a/PharmApp/PharmApp/PharmApp.csproj
+++ b/PharmApp/PharmApp/PharmApp.csproj
@@ -164,6 +164,15 @@
     <Compile Include="src\CV\Screens\ScreenRMS.cs" />
     <Compile Include="src\CV\Screens\ScreenOrderPad.cs" />
     <Compile Include="src\Email\NHSClient.cs" />
+    <Compile Include="src\GUI\EmailPatientDetailsButtonDrawing .cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="src\GUI\EmailFormBlank.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="src\GUI\EmailFormBlank.Designer.cs">
+      <DependentUpon>EmailFormBlank.cs</DependentUpon>
+    </Compile>
     <Compile Include="src\GUI\EmailForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -447,6 +456,7 @@
     <Content Include="License-LGPL.txt" />
     <Content Include="Resources\Blue_circle.png" />
     <Content Include="Resources\copy_120015.png" />
+    <Content Include="Resources\email_icon.png" />
     <Content Include="Resources\Green_circle.png" />
     <Content Include="Resources\Green_circle_ast.png" />
     <Content Include="Resources\Link_icon.ico" />
@@ -485,6 +495,9 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="src\GUI\EmailFormBlank.resx">
+      <DependentUpon>EmailFormBlank.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="src\GUI\EmailForm.resx">
       <DependentUpon>EmailForm.cs</DependentUpon>
